apps/cluster/homepage/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - homepage.cloud.obara.xyz
  rules:
    - backendRefs:
        - name: oauth2-proxy-homepage
          namespace: oauth2-proxy
          port: 80
